--- a/index.html
+++ b/index.html
@@ -22,6 +22,24 @@
 	<!-- <img src="img/gif/1.gif"> -->
 	<!-- <video id="video" autoplay="autoplay" loop playsinline ><source src="img/gif/1.mp4"></video> -->
 	
+	<div id="compass-x" class="compass">
+		<div class="viewport">
+			<div class="meter">
+				<div class="meter-line mlx-0"></div>
+				<div class="meter-line mlx-1"></div>
+				<div class="meter-line mlx-2"></div>
+				<div class="meter-line mlx-3"></div>
+				<div class="meter-line mlx-4"></div>
+				<div class="meter-line mlx-5"></div>
+				<div class="meter-line mlx-6"></div>
+				<div class="meter-line mlx-7"></div>
+				<div class="meter-line mlx-8"></div>
+				<div class="meter-line mlx-9"></div>
+			</div>
+		</div>
+	</div>
+
+
 	<div id="cross-hair"></div>
 	<div id="info-box">
 		x:<span class="coord-x"> </span>
@@ -91,7 +109,7 @@
 	<script type="text/javascript" src="js/libgif-js-master/rubbable.js"></script>
 	
 	<script type="text/javascript" src="js/gsap.min.js"></script>
-	<script type="text/javascript" src="js/hexa-min.js?v=0.1"></script>
+	<script type="text/javascript" src="js/script-min.js?v=0.1"></script>
 
 	<script src="https://cdn.jsdelivr.net/npm/lodash@4.17.19/lodash.min.js"></script>
 </body>
