realised gif is shit and freezeframe is as well

--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
 	<script type="text/javascript" src="js/libgif-js-master/libgif.js"></script>
 	<script type="text/javascript" src="js/libgif-js-master/rubbable.js"></script>
 	
+	<script type="text/javascript" src="js/freezeframe/dist/freezeframe.min.js"></script>
+	
 	<script type="text/javascript" src="js/gsap.min.js"></script>
 	<script type="text/javascript" src="js/script-min.js?v=0.1"></script>
 
