--- a/index.html
+++ b/index.html
@@ -14,13 +14,11 @@
 	<script type="text/javascript" src="js/modernizr-webp.min.js"></script>
 	
 
-	<link rel="stylesheet" href="css/hexa.css?v=0.1">
+	<link rel="stylesheet" href="css/styles.css?v=0.1">
 </head>
 
 
 <body class="" id="body">
-	<!-- <img src="img/gif/1.gif"> -->
-	<!-- <video id="video" autoplay="autoplay" loop playsinline ><source src="img/gif/1.mp4"></video> -->
 	
 	<div id="compass-x" class="compass">
 		<div class="viewport">
@@ -105,10 +103,10 @@
 		</div>
 	</div>
 
-	<script type="text/javascript" src="js/libgif-js-master/libgif.js"></script>
+	<!-- <script type="text/javascript" src="js/libgif-js-master/libgif.js"></script>
 	<script type="text/javascript" src="js/libgif-js-master/rubbable.js"></script>
 	
-	<script type="text/javascript" src="js/freezeframe/dist/freezeframe.min.js"></script>
+	<script type="text/javascript" src="js/freezeframe/dist/freezeframe.min.js"></script> -->
 	
 	<script type="text/javascript" src="js/gsap.min.js"></script>
 	<script type="text/javascript" src="js/script-min.js?v=0.1"></script>
